--- a/Milestone1/README
+++ b/Milestone1/README
@@ -1,1 +1,2 @@
 For both of the Python code files in this folder, before running the code, mySQL has to be started to load the data crawled from the websites.
+The files were used to crawl stock list and stock price from websites.
